--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-langcorn==0.0.12
+fastapi==0.100.1
+pypdf2==3.0.1
+langchain==0.0.223
 pinecone-client==2.2.2
+pypdf==3.12.0
+openai==0.27.8
+tiktoken==0.4.0
 uvicorn[standard]
